# zk-communist

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.bmad/_cfg/: files-manifest.csv  manifest.yaml
.bmad/_cfg/ides/: claude-code.yaml
.bmad/bmm/: config.yaml
.bmad/core/: config.yaml
.github/workflows/: docker-build.yml
config/: config.yaml.template
config/systemd/: network-monitoring.service
docker/: docker-entrypoint.sh
docs/: architecture.md  bmm-workflow-status.yaml  epics.md  github-actions-setup.md  kubernetes-deployment.md  prd.md  product-brief-zk-communist-2025-11-20.md  research-technical-2025-11-20.md  tech-spec.md
docs/api/: README.md
docs/operations/: deployment-guide.md
docs/sprint-artifacts/: 1-1-core-device-integration.context.xml  1-1-project-infrastructure-setup.context.xml  1-1-project-infrastructure-setup.md  1-2-time-manipulation-logic.context.xml  1-3-kubernetes-deployment-operations.context.xml  sprint-status.yaml  tech-spec-epic-1.md
docs/stories/: zk-communist-epic-001-story-001.md  zk-communist-epic-001-story-002.md  zk-communist-epic-001-story-003.md
k8s/: configmap.yaml  deployment.yaml  monitoring.yaml  secret.yaml
scripts/: emergency_stop.sh  health-check.sh  install.sh
src/: __init__.py  main.py
src/api/v1/: __init__.py  config.py  device.py  emergency.py  system.py
src/core/: __init__.py  config_manager.py  device_manager.py
src/services/: __init__.py  device_manager.py  scheduler.py  time_manipulator.py
src/utils/: __init__.py  exceptions.py  logging.py  time_helpers.py
tests/: __init__.py  conftest.py  test_container_integration.py  test_device_manager.py  test_exceptions.py  test_infrastructure.py  test_integration_device_manager.py  test_integration_time_manipulation.py  test_time_manipulator.py
tests/fixtures/: __init__.py  device_mocks.py
zk-communist-gitops/apps/: zk-communist.yaml
zk-communist-gitops/base/: namespace.yaml  rbac.yaml
zk-communist-gitops/base/configmaps/: config.yaml
zk-communist-gitops/ci/: build.yaml
zk-communist-gitops/monitoring/: network-policy.yaml  prometheus.yaml
